// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`graded-group should snapshot: initial render (mobile: false) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="perseus-graded-group"
          >
            <div
              class="title_1lagzkb"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-nohighlight widget-block"
                      >
                        <div
                          class="categorizer-container "
                        >
                          <table
                            class="categorizer-table mobileTable_1wmcwov"
                          >
                            <thead>
                              <tr>
                                <td
                                  class="emptyHeaderCell_1mttrgd"
                                />
                                <th
                                  class="header_whrfk4"
                                  id="perseus_radio_10-cat-0"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  class="header_whrfk4"
                                  id="perseus_radio_10-cat-1"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_10-item-0"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-0 perseus_radio_10-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":ri:"
                                            name="perseus_radio_10-row-0"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-0 perseus_radio_10-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rj:"
                                            name="perseus_radio_10-row-0"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_10-item-1"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-1 perseus_radio_10-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rk:"
                                            name="perseus_radio_10-row-1"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-1 perseus_radio_10-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rl:"
                                            name="perseus_radio_10-row-1"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_10-item-2"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-2 perseus_radio_10-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rm:"
                                            name="perseus_radio_10-row-2"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-2 perseus_radio_10-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rn:"
                                            name="perseus_radio_10-row-2"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_10-item-3"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-3 perseus_radio_10-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":ro:"
                                            name="perseus_radio_10-row-3"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_10-item-3 perseus_radio_10-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rp:"
                                            name="perseus_radio_10-row-3"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <div
              aria-live="polite"
              role="status"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                <div
                  class="paragraph perseus-paragraph-centered"
                  data-perseus-paragraph-index="0"
                >
                  

                </div>
              </div>
            </div>
            <button
              aria-disabled="false"
              class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_u9mtba"
              data-kind="secondary"
              type="button"
            >
              <span
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-text_1kowsup"
              >
                Check
              </span>
            </button>
            <button
              class="showHintLink_1n4y2tp"
              tabindex="0"
            >
              Explain
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`graded-group should snapshot: initial render (mobile: true) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="gradedGroup_14sgdtb perseus-graded-group"
          >
            <div
              class="title_1lagzkb"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-nohighlight widget-block"
                      >
                        <div
                          class="categorizer-container fullBleedContainer_8ybp6"
                        >
                          <table
                            class="categorizer-table mobileTable_1wmcwov"
                          >
                            <thead>
                              <tr>
                                <td
                                  class="emptyHeaderCell_1mttrgd"
                                />
                                <th
                                  class="header_whrfk4"
                                  id="perseus_radio_9-cat-0"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  class="header_whrfk4"
                                  id="perseus_radio_9-cat-1"
                                  scope="col"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_9-item-0"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-0 perseus_radio_9-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":ra:"
                                            name="perseus_radio_9-row-0"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-0 perseus_radio_9-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rb:"
                                            name="perseus_radio_9-row-0"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_9-item-1"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-1 perseus_radio_9-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rc:"
                                            name="perseus_radio_9-row-1"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-1 perseus_radio_9-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rd:"
                                            name="perseus_radio_9-row-1"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_9-item-2"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-2 perseus_radio_9-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":re:"
                                            name="perseus_radio_9-row-2"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-2 perseus_radio_9-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rf:"
                                            name="perseus_radio_9-row-2"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <th
                                  class="itemHeader_1spxt1g"
                                  id="perseus_radio_9-item-3"
                                  scope="row"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-3 perseus_radio_9-cat-0"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rg:"
                                            name="perseus_radio_9-row-3"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category cell_13aakpm"
                                >
                                  <div
                                    class="default_xu2jcg"
                                  >
                                    <div
                                      class="default_xu2jcg-o_O-wrapper_h2k1uh"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                                      >
                                        <div
                                          class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                                        >
                                          <input
                                            aria-invalid="false"
                                            aria-labelledby="perseus_radio_9-item-3 perseus_radio_9-cat-1"
                                            class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                                            id=":rh:"
                                            name="perseus_radio_9-row-3"
                                            type="radio"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <button
              class="showHintLink_1n4y2tp"
              tabindex="0"
            >
              Explain
            </button>
            <div
              style="display: flex; align-items: center; height: 68px; margin: 16px -16px -16px -16px; padding-left: 16px; padding-right: 10px; justify-content: space-between;"
            >
              <span />
              <button
                aria-disabled="true"
                class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_1vcomhn-o_O-disabled_okj0ts"
                data-kind="primary"
                type="button"
              >
                <span
                  class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-text_1kowsup"
                >
                  Check
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
